--- a/src/Components/LineProfiles/StraightLineProfile/StraightLineProfile.module.css
+++ b/src/Components/LineProfiles/StraightLineProfile/StraightLineProfile.module.css
@@ -1,21 +1,25 @@
 .LineProfile {
-    margin: auto;
+    /*margin: auto;*/
+    position: relative;
     width: 95%;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-top: 10px;
+    margin-bottom: -6px;
     /*background-color: #e9ebf0;*/
+    height: 74px;
     background-color: rgba(0, 0, 0, 0.3);
 
+
+    overflow: hidden;
     border-radius: 10px;
     display: inline-flex;
-    box-shadow: 0 0 10px black;
+    box-shadow: 0 0 8px black;
 }
 
 .leftSide {
-    width: 5vw;
+    width: 4.8vw;
     max-width: 65px;
-    /*border-radius: 10px;*/
     border-right: 2px solid rgba(0, 0, 0, 0.3);
+    margin-bottom: 3px;
 }
 
 .swatch {
@@ -25,6 +29,7 @@
     height: 80%;
     width: 80%;
     cursor: pointer;
+    transition: transform 80ms ease-in-out;
 }
 
 .swatch:hover {
@@ -70,9 +75,14 @@
 .deleteButton {
     font-size: 18pt;
     position: absolute;
-    right: 1.6vw;
+    right: 0.8vw;
     cursor: pointer;
+    transition: transform 80ms ease-in-out;
     /*float: right;*/
+}
+
+.deleteButton:hover {
+    transform: scale(1.2);
 }
 
 .bottomSection {
